# mvg

./: Cargo.toml
mvg_lib/: Cargo.toml
mvg_lib/src/: lib.rs  query.rs  test.rs
mvg_lib/src/data/: connection.rs  departure.rs  location.rs  mod.rs
src/: conf.rs  main.rs
