[package]
name = "mvg"
version = "0.1.0"
authors = ["ThoFrank <thomas@franks-im-web.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mvg_lib = { path = "mvg_lib" }
clap = "3.0.0-beta.2"
tokio = { version = "0.2", features = ["full"] }
termion = "1.5"
css-color-parser = "0.1.2"
