[package]
name = "mvg_lib"
version = "0.1.0"
authors = ["ThoFrank <t.frank@tum.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13"
hyper-tls = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
http = "0.2"
chrono = "0.4"
percent-encoding = "2.1.0"

[dev-dependencies]
tokio = { version = "0.2", features = ["full"] }